06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/Producer_Placed_on_Market__c.object-meta.xml
<CustomObject>
    <label>Producer Placed on Market</label>
    <nameField>
        <displayFormat>M-{000000}</displayFormat>
        <label>Producer Placed on Market #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Producer Placed on Market</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>