06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Producer Placed on Markets</relationshipLabel>
    <relationshipName>Producer_Placed_on_Markets</relationshipName>
    <type>Lookup</type>
</CustomField>