06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Account_For_Community__c.field-meta.xml
<CustomField>
    <fullName>Account_For_Community__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account For Community</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Producer Placed on Markets (Account For Community)</relationshipLabel>
    <relationshipName>Producer_Placed_on_Markets1</relationshipName>
    <type>Lookup</type>
</CustomField>