06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Acknowledgement_of_Statements__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_of_Statements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acknowledgement of Statements</label>
    <type>Checkbox</type>
</CustomField>