06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Action_Date__c</fullName>
    <formula>Quarter_End_Date__c  + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Date</label>
    <type>Date</type>
</CustomField>