06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Alkalike_Detailed_Automative_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Alkalike_Detailed_Automative_Estimate__c</fullName>
    <label>Alkalike Detailed (Estimate)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>