06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Alkaline_Large_Full_Automative__c.field-meta.xml
<CustomField>
    <fullName>Alkaline_Large_Full_Automative__c</fullName>
    <label>Alkaline Large Full</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>