06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Alkaline_Small_Full_Portable_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Alkaline_Small_Full_Portable_Estimate__c</fullName>
    <label>Alkaline - Small (Estimate)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>