06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Battery_Classifications__c.field-meta.xml
<CustomField>
    <fullName>Battery_Classifications__c</fullName>
    <label>Battery Classifications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Portable</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>