06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Battery_Classifications_Industrial__c.field-meta.xml
<CustomField>
    <fullName>Battery_Classifications_Industrial__c</fullName>
    <formula>INCLUDES(Battery_Classifications__c, &quot;Industrial&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Battery Classifications (Industrial)</label>
    <type>Checkbox</type>
</CustomField>