06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Battery_Classifications_Portable__c.field-meta.xml
<CustomField>
    <fullName>Battery_Classifications_Portable__c</fullName>
    <formula>INCLUDES(Battery_Classifications__c, &quot;Portable&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Battery Classifications (Portable)</label>
    <type>Checkbox</type>
</CustomField>