06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Battery_Reporting_Method__c.field-meta.xml
<CustomField>
    <fullName>Battery_Reporting_Method__c</fullName>
    <label>Battery Reporting Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compulsory</fullName>
            </value>
            <value>
                <fullName>Detailed</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>