06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Battery_Reporting_Method_Full__c.field-meta.xml
<CustomField>
    <fullName>Battery_Reporting_Method_Full__c</fullName>
    <formula>INCLUDES(Battery_Reporting_Method__c, &quot;Full&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Battery Reporting Method (Full)</label>
    <type>Checkbox</type>
</CustomField>