06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Category_10_Header__c.field-meta.xml
<CustomField>
    <fullName>Category_10_Header__c</fullName>
    <formula>&quot;CATEGORY 10: AUTOMATIC DISPENSERS || Examples: Vending machines for hot drinks, cold drinks, cash dispensers&quot;</formula>
    <label>Category 10 Header</label>
    <type>Text</type>
</CustomField>