06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Category_10_Household__c.field-meta.xml
<CustomField>
    <fullName>Category_10_Household__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Automatic dispensers</inlineHelpText>
    <label>Category 10 Household</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>