06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Category_11_Header__c.field-meta.xml
<CustomField>
    <fullName>Category_11_Header__c</fullName>
    <formula>&quot;CATEGORY 11: DISPLAY EQUIPMENT || Examples: Monitors, screens, digital photo frames, projectors&quot;</formula>
    <label>Category 11 Header</label>
    <type>Text</type>
</CustomField>