06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Category_12_Header__c.field-meta.xml
<CustomField>
    <fullName>Category_12_Header__c</fullName>
    <formula>&quot;CATEGORY 12: APPLIANCES CONTAINING REFRIGERANTS || Examples: Fridges, freezers, air conditioning equipment containing refrigerants&quot;</formula>
    <label>Category 12 Header</label>
    <type>Text</type>
</CustomField>