06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Category_12_Non_Household__c.field-meta.xml
<CustomField>
    <fullName>Category_12_Non_Household__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Appliances containing refrigerants</inlineHelpText>
    <label>Category 12 Non-Household</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>