06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Category_Household_Total__c.field-meta.xml
<CustomField>
    <fullName>Category_Household_Total__c</fullName>
    <formula>Category_1_Household__c + 
Category_2_Household__c + 
Category_3_Household__c + 
Category_4_Household__c + 
Category_5_Household__c + 
Category_6_Household__c + 
Category_7_Household__c + 
Category_8_Household__c + 
Category_9_Household__c + 
Category_10_Household__c + 
Category_11_Household__c + 
Category_12_Household__c + 
Category_13_Household__c + 
Category_14_Household__c + 
Category_15_Household__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category Household Total</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>