06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Compliance_Year__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Year__c</fullName>
    <label>Compliance Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>2026</fullName>
            </value>
            <value>
                <fullName>2027</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>