06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Date_of_Resubmission__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Resubmission__c</fullName>
    <label>Date of Resubmission</label>
    <type>Date</type>
</CustomField>