06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Director_Sign_By__c.field-meta.xml
<CustomField>
    <fullName>Director_Sign_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director Sign By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Producer_Placed_on_Markets</relationshipName>
    <type>Lookup</type>
</CustomField>