06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Director_Sign_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Director_Sign_Date_Time__c</fullName>
    <label>Director Sign Date/Time</label>
    <type>DateTime</type>
</CustomField>