06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Director_Signature__c.field-meta.xml
<CustomField>
    <fullName>Director_Signature__c</fullName>
    <formula>IF(Director_Signature_Doc_Id__c == NULL , &apos;&apos;,  IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))
 + &apos;/servlet/servlet.FileDownload?file=&apos; + Director_Signature_Doc_Id__c , &apos;director sign&apos;, 100, 100) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Director Signature</label>
    <type>Text</type>
</CustomField>