06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Director_Signature_Doc_Id__c.field-meta.xml
<CustomField>
    <fullName>Director_Signature_Doc_Id__c</fullName>
    <label>Director Signature Doc Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>