06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/EEE_Calculatate_By__c.field-meta.xml
<CustomField>
    <fullName>EEE_Calculatate_By__c</fullName>
    <label>EEE Calculated By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchases</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Imports</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>