06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/EEE_product_weights__c.field-meta.xml
<CustomField>
    <fullName>EEE_product_weights__c</fullName>
    <label>EEE Product Weights</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supplier weights</fullName>
            </value>
            <value>
                <fullName>Sample weighing</fullName>
            </value>
            <value>
                <fullName>Estimated</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Manufacturer weights</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>