06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/History_List_View__c.field-meta.xml
<CustomField>
    <fullName>History_List_View__c</fullName>
    <formula>IF($Permission.Producer_Standard_User, ISPICKVAL(Status__c, &quot;Signed&quot;) || ISPICKVAL(Status__c, &quot;Acknowledge Market Data&quot;),
  ISPICKVAL(Status__c, &quot;Signed&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>History List View</label>
    <type>Checkbox</type>
</CustomField>