06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Internal_Verification_Complete__c.field-meta.xml
<CustomField>
    <fullName>Internal_Verification_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Verification Complete</label>
    <type>Checkbox</type>
</CustomField>