06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Is_Last_Years_POMD__c.field-meta.xml
<CustomField>
    <fullName>Is_Last_Years_POMD__c</fullName>
    <formula>TEXT(Compliance_Year__c) = TEXT(YEAR(TODAY()) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Last Years POMD?</label>
    <type>Checkbox</type>
</CustomField>