06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Is_Previous_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Is_Previous_Quarter__c</fullName>
    <formula>VALUE(LEFT(Quarter_With_Year__c, 4)) &lt; YEAR(TODAY()) ||
(
    VALUE(LEFT(Quarter_With_Year__c, 4)) = YEAR(TODAY()) &amp;&amp;
    VALUE(RIGHT(Quarter_With_Year__c, 1)) &lt; CEILING(MONTH(TODAY()) / 3)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Previous Quarter?</label>
    <type>Checkbox</type>
</CustomField>