06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Is_Previous_Year_Compliance_Year__c.field-meta.xml
<CustomField>
    <fullName>Is_Previous_Year_Compliance_Year__c</fullName>
    <formula>YEAR(Quarter_Start_Date__c) = YEAR(TODAY()) - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Previous Year Compliance Year?</label>
    <type>Checkbox</type>
</CustomField>