06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Is_Ready_To_Acknowledge__c.field-meta.xml
<CustomField>
    <fullName>Is_Ready_To_Acknowledge__c</fullName>
    <formula>AND(
NOT(
OR(
ISNULL(Category_1_Household__c),
ISNULL(Category_2_Household__c),
ISNULL(Category_3_Household__c),
ISNULL(Category_4_Household__c),
ISNULL(Category_5_Household__c),
ISNULL(Category_6_Household__c),
ISNULL(Category_7_Household__c),
ISNULL(Category_8_Household__c),
ISNULL(Category_9_Household__c),
ISNULL(Category_10_Household__c),
ISNULL(Category_11_Household__c),
ISNULL(Category_12_Household__c),
ISNULL(Category_13_Household__c),
ISNULL(Category_14_Household__c),
ISNULL(Category_15_Household__c)
)
&amp;&amp;
RecordTypeId &lt;&gt; &apos;012Sj000000C5iL&apos;
),
NOT(
OR(
ISNULL(Category_1_Non_Household__c),
ISNULL(Category_2_Non_Household__c),
ISNULL(Category_3_Non_Household__c),
ISNULL(Category_4_Non_Household__c),
ISNULL(Category_5_Non_Household__c),
ISNULL(Category_6_Non_Household__c),
ISNULL(Category_7_Non_Household__c),
ISNULL(Category_8_Non_Household__c),
ISNULL(Category_9_Non_Household__c),
ISNULL(Category_10_Non_Household__c),
ISNULL(Category_11_Non_Household__c),
ISNULL(Category_12_Non_Household__c),
ISNULL(Category_13_Non_Household__c),
ISNULL(Category_14_Non_Household__c),
ISNULL(Category_15_Non_Household__c)
)
&amp;&amp;
RecordTypeId &lt;&gt; &apos;012Sj000000C5iJ&apos;
)
)</formula>
    <label>Is Ready To Acknowledge?</label>
    <type>Checkbox</type>
</CustomField>