06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Is_Record_Signed__c.field-meta.xml
<CustomField>
    <fullName>Is_Record_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Record Signed?</label>
    <type>Checkbox</type>
</CustomField>