06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Is_this_Last_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Is_this_Last_Quarter__c</fullName>
    <formula>Quarter_Start_Date__c = 
CASE(
    MOD(FLOOR((MONTH(TODAY()) - 1) / 3), 4),
    0, DATE(YEAR(TODAY()) - 1, 10, 1),  /* Last year&apos;s Q4 */
    1, DATE(YEAR(TODAY()), 1, 1),      /* Q1 */
    2, DATE(YEAR(TODAY()), 4, 1),      /* Q2 */
    3, DATE(YEAR(TODAY()), 7, 1),      /* Q3 */
    NULL /* Default fallback */
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is this Last Quarter?</label>
    <type>Checkbox</type>
</CustomField>