06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Last_Quarter_Producer_Placed_on_Market__c.field-meta.xml
<CustomField>
    <fullName>Last_Quarter_Producer_Placed_on_Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Quarter Producer Placed on Market</label>
    <referenceTo>Producer_Placed_on_Market__c</referenceTo>
    <relationshipLabel>Producer Placed on Markets (Last Quarter Producer Placed on Market)</relationshipLabel>
    <relationshipName>Producer_Placed_on_Markets1</relationshipName>
    <type>Lookup</type>
</CustomField>