06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Last_Year_Producer_Placed_on_Market__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Producer_Placed_on_Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Year Producer Placed on Market</label>
    <referenceTo>Producer_Placed_on_Market__c</referenceTo>
    <relationshipLabel>Producer Placed on Markets</relationshipLabel>
    <relationshipName>Producer_Placed_on_Markets</relationshipName>
    <type>Lookup</type>
</CustomField>