06-producer-portal/code/main/default/objects/Producer_Placed_on_Market__c/fields/Lead_Acid_All_Full_Industrial__c.field-meta.xml
<CustomField>
    <fullName>Lead_Acid_All_Full_Industrial__c</fullName>
    <label>Lead Acid All Full</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>